--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-faker>=18.0.0
-pandas>=1.3.0
-pillow>=9.0.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-tensorflow>=2.6.0
-librosa>=0.9.0
-pyttsx3>=2.90
-fastapi>=0.70.0
-uvicorn>=0.16.0
-python-multipart>=0.0.5
+fastapi==0.95.2
+uvicorn==0.22.0
+tensorflow==2.12.0
+numpy==1.24.3
+Pillow==9.5.0
+librosa==0.10.0
+python-multipart==0.0.6
+pydantic==1.10.7
