Fix dependency conflict: downgrade numpy to 1.23.5 for TensorFlow compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.95.2
 uvicorn==0.22.0
 tensorflow==2.12.0
-numpy==1.24.3
+numpy==1.23.5  # Downgraded to match TensorFlow's requirement
 Pillow==9.5.0
 librosa==0.10.0
 python-multipart==0.0.6
